[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubiapi"
version = "1.0.0"
description = "Python API wrapper for Ubiregi POS API"
readme = "README.md"
authors = [{ name = "Shinichi Takano", email = "s-takano@cd6.so-net.ne.jp" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "pydantic>=1.9.1",
    "python-dateutil>=2.8.2",
    "requests>=2.28.0",
    "tomli>=2.0.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/s-takano/ubiapi"
